Доделал edit.jsp и разобрался с textArea

--- a/web/css/style.css
+++ b/web/css/style.css
@@ -44,3 +44,10 @@ h2, h3 {
 li {
     margin: 15px 0;
 }
+
+/*textarea {*/
+/*    width: 21%;*/
+/*    margin-left: 0px;*/
+/*    padding-left: 0px;*/
+/*    font-weight: bold;*/
+/*}*/
